objects/Account/fields/Agent_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Agent_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Agent Identifier</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>