objects/Account/fields/AUM_in_Manulife__c.field-meta.xml
<CustomField>
    <fullName>AUM_in_Manulife__c</fullName>
    <inlineHelpText>what help information you would like to add?</inlineHelpText>
    <label>AUM in Manulife</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>