objects/Account/fields/Chin_Name__c.field-meta.xml
<CustomField>
    <fullName>Chin_Name__c</fullName>
    <label>Chinese Name</label>
    <type>TextArea</type>
</CustomField>