objects/Account/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>WAMCRM:  
For the System Audit perspective. User is not allowed to delete any record.

User can either check &#39;Deleted&#39; checkbox to mark record deletion or request System Admin to help the record deletion</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>