objects/Account/fields/Distributor_Id__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Id__c</fullName>
    <description>External ID for Account:
WAMCRM: specifies distributor ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Distributor ID</inlineHelpText>
    <label>Distributor Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>