objects/Account/fields/Financial_Value_Tier__c.field-meta.xml
<CustomField>
    <fullName>Financial_Value_Tier__c</fullName>
    <label>Financial Value Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>