objects/Account/fields/Group_Company_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Group_Company_Distributor__c</fullName>
    <description>WAMCRM: Define whether this is Group Company, or Distributor</description>
    <inlineHelpText>is Group Company, Company, or Distributor Account?
Example of Group Company:
- Bank of China

Example of Company:
- Bank of China (HK) Limited

Example of Distributor
- Bank of China (HK) Limited AC1
- Bank of China (Hong Kong) Limited / AC2</inlineHelpText>
    <label>Hierarchy level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GroupCompany</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
                <default>true</default>
                <label>Company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>