objects/Account/fields/Legal_ID__c.field-meta.xml
<CustomField>
    <fullName>Legal_ID__c</fullName>
    <label>Legal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>