objects/Account/fields/Ownership_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Ownership_of_Business__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HK</fullName>
                <default>true</default>
                <label>HK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>