objects/Account/fields/Regional__c.field-meta.xml
<CustomField>
    <fullName>Regional__c</fullName>
    <description>is this account Regional or Local?</description>
    <inlineHelpText>is this account Regional or Local</inlineHelpText>
    <label>Regional or Local</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asia Region</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>