objects/Account/fields/Service_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Service_Requirement__c</fullName>
    <label>Service Requirement</label>
    <type>TextArea</type>
</CustomField>