objects/Account/fields/Share_of_Wallet_AUM__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet_AUM__c</fullName>
    <label>Share of Wallet % (AUM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>