objects/Account/fields/Share_of_Wallet_Net_Sales__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet_Net_Sales__c</fullName>
    <description>WAMCRM: Share of Wallet % (Net Sales)</description>
    <label>Share of Wallet % (Net Sales)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>