objects/Account/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <label>Unit Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>