objects/Account/recordTypes/Company_Account.recordType-meta.xml
<RecordType>
    <fullName>Company_Account</fullName>
    <active>true</active>
    <description>Record Type for Contact Centre for EB GP and GLH customers</description>
    <label>Company Account</label>
</RecordType>