objects/Account/recordTypes/SAM_Agent.recordType-meta.xml
<RecordType>
    <fullName>SAM_Agent</fullName>
    <active>true</active>
    <label>SAM Agent</label>
</RecordType>