objects/Account/recordTypes/WAM_Distributor.recordType-meta.xml
<RecordType>
    <fullName>WAM_Distributor</fullName>
    <active>true</active>
    <description>Record type for WAM CRM</description>
    <label>WAM Distributor</label>
</RecordType>