objects/Account/validationRules/cct_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cct_Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  $RecordType.DeveloperName = "Third_Party_Person_Account",
  OR(AND(NOT(ISBLANK(Phone)),LEN(Phone)&gt;18),AND(NOT(ISBLANK(Phone)),NOT(ISNUMBER(Phone))))  
)</errorConditionFormula>
    <errorMessage>Please Enter Correct Phone Number.</errorMessage>
</ValidationRule>