objects/Account/validationRules/WAM_Validate_Fax_Input.validationRule-meta.xml
<ValidationRule>
    <fullName>WAM_Validate_Fax_Input</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
AND(RecordType.Name = $Setup.WAM_CustomSetting__c.Account_Distributor_Record_Type_Label__c, !ISBLANK(Fax)), 
IF(OR(CONTAINS(Fax, "+"), CONTAINS(Fax, "("), CONTAINS(Fax, ")")),
IF( LEFT(TRIM(Fax), 1) == "+", 
IF(!CONTAINS(Fax, "(") || !CONTAINS(Fax, ")"), TRUE, FALSE), 
IF(LEFT(TRIM(Fax), 1) &lt;&gt; "+", TRUE, FALSE) 
), 
FALSE), 
FALSE)</errorConditionFormula>
    <errorDisplayField>Fax</errorDisplayField>
    <errorMessage>Please enter valid International Number</errorMessage>
</ValidationRule>