objects/Account/listViews/All_3rd_Person_Account.listView-meta.xml
<ListView>
    <fullName>All_3rd_Person_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Third_Party_Person_Account</value>
    </filters>
    <label>All 3rd Person Account</label>
</ListView>